# Heat-Diffusion

./: README.md
p2/: CMakeLists.txt  Readme
p2/src/: 2d.conf  3d.conf  heat2D3D.cu
se2/: CMakeLists.txt  mpi.pbs  readme
se2/src/: heattransfer.cc
se3/: CMakeLists.txt  Readme
se3/src/: 2d.conf  2d1.conf  2d2.conf  3d1.conf  3d2.conf  heat2D3D.cc
